# mockomatic

./: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.yml  index.popsql  nginx.conf
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint.sh
backend/.sqlx/: query-071cc76bd5c32649d85a663f0d8cb7eaa546e708412a07f642472ce2ab746807.json  query-07baa9e73f1c8bdec0a9319f71177e8e54ca452ff8b281fd4b3bffd79ec47319.json  query-0dc1ec3a31613cdc39e473a942ff9bcdd562b6eb8b8db4f1b9080aa7698d5f13.json  query-120eaefd66daa09974c8cf03aa97bffb07f40388ad7e64443ac68325253bd17f.json  query-1c8e5223c278ac56ba131ea6284c517e621e13b8806de6cec18651691d9319f0.json  query-20f4a907d6292f88b7d3478396203782bb66c8db587653066aff2a1481e4d09d.json  query-258c5255ff865518488132ddff465214f0f43f6a4b174c3b11785f514d18cfd3.json  query-29e55c802391d1d8d95779c192661b6d3b48b1c9e751c9e940756d66845a52ad.json  query-2d95111cc51307e82854eedb870be79d55e73dcfa9b423151d9a80021f04b040.json  query-3151d7cbf9c39cb62be34f5883306617d4090ab3e05d7b759ecaddef910bb659.json  query-323ac98fdb4906a80f749839cd97c5a0ee3b2015158ce85cbab34f78bf8a72af.json  query-353929dd8939eaf75ae9f7ea0aee08f63558bd30beae6267da9b7b18eb2159dc.json  query-37f93ee6a500633a49427d84368e754c06c2bfdfd7335688c2688d04ecaa20e4.json  query-3c148c6751825b6fa43eac4985b7378fd1e461922b7668f2e33c682ddd86ede6.json  query-43c2f5ec11c06b3b4600db8b3d5fb8dc811fb9888f21ac78f76a3cdf2c8b7b1e.json  query-4637ea50a1ed796a325e3cd3b944745061adcba149849975fe35452b50e18e90.json  query-46eb717909900c3d57fddf433590ed6fd112b15567378e60ea38a2de7b6d0903.json  query-475ec7b41df74b4a3f16e54158120e34a5a06fcf8527092785a300d323924be1.json  (+65 more)
backend/src/: allocation.rs  (+4 more)
(+127 files in other folders)
