[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum_csrf = "0.11.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
