[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie-private"] }
axum_csrf = "0.11.0"
cookie = "0.18.1"
dotenvy = "0.15.7"
headers = "0.4.0"
jsonwebtoken = "9.3.1"
once_cell = "1.20.3"
password-hash = { version = "0.5.0", features = ["std"] }
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros", "uuid", "time"] }
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["serde", "local-offset", "serde-human-readable"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
uuid = { version = "1.13.1", features = ["serde", "v4", "v7"] }
